--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
       href="https://cdn.jsdelivr.net/npm/css-reset-and-normalize/css/reset-and-normalize.min.css"
     />
     <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body></body>
