React with Vite init

--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@
             challenge, solution by user josuesn1402"
     />
     <title>Frontend Mentor | Testimonials grid section</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/css-reset-and-normalize/css/reset-and-normalize.min.css"
-    />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,7 +25,9 @@
       href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/main.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
