--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="/public/favicon-32x32.png"
     />
     <!-- Infor -->
     <meta name="author" content="Josue Sanchez Nima" />
